--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,10 +18,14 @@
 
     <title>Toy Lending Library Manager</title>
 
-
   <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
     <%= yield %>
+
+       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
