--- a/app/views/toys/edit.erb
+++ b/app/views/toys/edit.erb
@@ -36,58 +36,73 @@
 		</div>
 	</div>
 	<div class="row" id="toyViewShow">
-		<h1><%= @toy.name %></h1>
-			
-<form action="/toys/<%= @toy.id %>" method="post">
-  <div class='form-group'>
-    Name:
-    <input type="text" name="name" class="form-control" value="<%= @toy.name %>">
-  </div>
-  <div class="form-group">
-    Have:
-    <input type="text" name="quantity_have" class="form-control" value="<%= @toy.quantity_have %>">
-  </div>
-  <div class="form-group">
-    Want:
-    <input type="text" name="quantity_wanted" class="form-control" value="<%= @toy.quantity_wanted %>">
-  </div>
-  <div class="form-group">
-    Brand:
-    <input type="text" name="brand" class="form-control" value="<%= @toy.brand %>">
-  </div>
-  <div class="form-group">
-    Manufacturer Website:
-    <input type="text" name="mfg_website" class="form-control" value="<%= @toy.mfg_website %>">
-  </div>
-  <div class="form-group">
-    Country of Origin:
-    <input type="text" name="country_of_origin" class="form-control" value="<%= @toy.country_of_origin %>">
-  </div>
-  <div class="form-group">
-    Store Purchased From:
-    <input type="text" name="store_purchased_from" class="form-control" value="<%= @toy.store_purchased_from %>">
-  </div>
-  <div class="form-group">
-    Cost:
-    <input type="text" name="purchase_price" class="form-control" value="<%= @toy.purchase_price %>">
-  </div>
-    Extended Play Idea:
-		<textarea type="textarea" name="extended_play_idea" class="form-control" rows="3" value="<%= @toy.purchase_price %>"></textarea>
-  </div>
 
-
-
-
-    <input type="submit" value="Update Book" class="btn btn-default">
+<% if @toy.errors.any? %>
+  <div>
+    <h2>Errors:</h2>
+    <ul>
+      <% @toy.errors.full_messages.each do |e| %>
+        <li><%= e %></li>
+      <% end %>
+    </ul>
   </div>
-</form>
+<% end %>
 
-
-		<p><a href="/toys/<%= @toy.id %>/edit">Edit This Toy</a></p>
-		<p><a href="/toys">Back to All Toys</a></p>
-
-	<p></p>
-
-
+		<h1><%= @toy.name %></h1>	
+    <form action="/toys/<%= @toy.id %>" method="post">
+      <input type="hidden" name="_method" value="patch">
+      <div class='form-group'>
+        Name:
+        <input type="text" name="name" class="form-control" value="<%= @toy.name %>">
+      </div>
+      <div class='form-group'>
+        UPC:
+        <input type="text" name="upc" class="form-control" value="<%= @toy.upc %>">
+      </div>
+      <div class="form-group">
+        Have:
+        <input type="text" name="quantity_have" class="form-control" value="<%= @toy.quantity_have %>">
+      </div>
+      <div class="form-group">
+        Want:
+        <input type="text" name="quantity_wanted" class="form-control" value="<%= @toy.quantity_wanted %>">
+      </div>
+      <div class="form-group">
+        Manufacturer Suggested Age Range:
+        <input type="text" name="mfg_suggested_age_range" class="form-control" value="<%= @toy.mfg_suggested_age_range %>">
+      </div>
+      <div class="form-group">
+        Brand:
+        <input type="text" name="brand" class="form-control" value="<%= @toy.brand %>">
+      </div>
+      <div class="form-group">
+        Pieces:
+        <input type="text" name="pieces" class="form-control" value="<%= @toy.pieces %>">
+      </div>
+      <div class="form-group">
+        Manufacturer Website:
+        <input type="text" name="mfg_website" class="form-control" value="<%= @toy.mfg_website %>">
+      </div>
+      <div class="form-group">
+        Country of Origin:
+        <input type="text" name="country_of_origin" class="form-control" value="<%= @toy.country_of_origin %>">
+      </div>
+      <div class="form-group">
+        Store Purchased From:
+        <input type="text" name="store_purchased_from" class="form-control" value="<%= @toy.store_purchased_from %>">
+      </div>
+      <div class="form-group">
+        Cost:
+        <input type="text" name="purchase_price" class="form-control" value="<%= @toy.purchase_price %>">
+      </div>
+      <div class="form-group">
+        Extended Play Idea:
+    		<textarea type="textarea" name="extended_play_idea" class="form-control" rows="3" value="<%= @toy.purchase_price %>"></textarea>
+      </div>
+      <div class="form-group">
+        <input type="submit" value="Update Toy" class="btn btn-default">
+      </div>
+    </form>
+    <p><a href="/toys">Back to All Toys</a></p>
+  </div>
 	</div>
-</div>
