--- a/app/views/toys/show.erb
+++ b/app/views/toys/show.erb
@@ -17,7 +17,7 @@
 		<div class="col-md-6">
 			<h2><%= @toy.name %></h2>
 			<div class="row">
-				<a href="edit.erb">
+				<a href="/toys/<%= @toy.id %>/edit">
 					<h5>Edit Record</h5>
 				</a>
 			</div>
