add and test box views

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,1 +1,10 @@
-<h1>Home Page</h1>
+<h1>Toy Lending Library Toy / Box Manager</h1>
+
+<ul>
+	<li><a href="/toys">Toys</a></li>
+	<li><a href="/boxes">Boxes</a></li>
+	<li><a href="/assigned_age_groups">Assigned Age Groups</a></li>
+	<li><a href="/skills">Skills</a></li>
+
+</ul>
+
