--- a/app/views/toys/show.erb
+++ b/app/views/toys/show.erb
@@ -24,7 +24,7 @@
 		</div>
 		<div class="col-md-6">
 			<div class="row">
-				<a href="/edit.erb">
+				<a href="/new.erb">
 					<h5>Add New</h5>
 				</a>
 			</div>
