--- a/app/views/boxes/index.erb
+++ b/app/views/boxes/index.erb
@@ -1,23 +1,20 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-6">
-			<h2>Toys Inventory</h2>
+			<h2>Boxes Inventory</h2>
 		</div>
 		<div class="col-md-6">
 			<div class="row">
-				<a href="/toys/new">
-					<h5>Add New</h5>
+				<a href="/boxes/new">
+					<h5>Add New Box</h5>
 				</a>
-			</div>
-			<div class="row">
-				<h5>Assign to Box</h5>
 			</div>
 		</div>
 	</div>
 	<div class="row">
 		<ol>
-			<% @toys.each do |t| %>
-	    	<li><a href="/toys/<%= t.id %>" ><%= t.name %></a></li>
+			<% @boxes.each do |t| %>
+	    	<li><a href="/boxes/<%= t.id %>" ><%= t.name %></a></li>
 	  	<% end %>
 		</ol>
 	</div>
