Skills views working

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,10 +1,14 @@
-<h1>Toy Lending Library Toy / Box Manager</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<h1>Toy Lending Library Toy / Box Manager</h1>
 
-<ul>
-	<li><a href="/toys">Toys</a></li>
-	<li><a href="/boxes">Boxes</a></li>
-	<li><a href="/assigned_age_groups">Assigned Age Groups</a></li>
-	<li><a href="/skills">Skills</a></li>
-
-</ul>
-
+			<ul>
+				<li><a href="/toys">Toys</a></li>
+				<li><a href="/boxes">Boxes</a></li>
+				<li><a href="/assigned_age_groups">Assigned Age Groups</a></li>
+				<li><a href="/skills">Skills</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
