--- a/app/views/toys/edit.erb
+++ b/app/views/toys/edit.erb
@@ -49,8 +49,9 @@
 <% end %>
 
 		<h1><%= @toy.name %></h1>	
-    <form action="/toys/<%= @toy.id %>" method="post">
-      <input type="hidden" name="_method" value="patch">
+ 
+ 
+<form action="/toys/<%= @toy.id %>" method="post">
       <div class='form-group'>
         Name:
         <input type="text" name="name" class="form-control" value="<%= @toy.name %>">
@@ -67,13 +68,26 @@
         Want:
         <input type="text" name="quantity_wanted" class="form-control" value="<%= @toy.quantity_wanted %>">
       </div>
+
+  <!-- DROPDOWN -->
       <div class="form-group">
-        Manufacturer Suggested Age Range:
-        <input type="text" name="mfg_suggested_age_range" class="form-control" value="<%= @toy.mfg_suggested_age_range %>">
+        Select a TLL age group:
+
+        <select id="assigned_age_group" class="form-control" name="assigned_age_group_id">
+          <% @assigned_age_groups.each do |a| %>
+            <option value="<%= a.id %>"><%= a.age %></option>
+          <% end %>
+        </select>
       </div>
+
+
       <div class="form-group">
         Brand:
         <input type="text" name="brand" class="form-control" value="<%= @toy.brand %>">
+      </div>
+      <div class="form-group">
+        Manufacturer Suggested Age Range:
+        <input type="text" name="mfg_suggested_age_range" class="form-control" value="<%= @toy.mfg_suggested_age_range %>">
       </div>
       <div class="form-group">
         Pieces:
@@ -95,14 +109,40 @@
         Cost:
         <input type="text" name="purchase_price" class="form-control" value="<%= @toy.purchase_price %>">
       </div>
+
+
+      <!-- DROPDOWN -->
+      <div class="form-group">
+        Assign to a Box:
+        <select id="box" class="form-control" name="box_id">
+          <% @boxes.each do |b| %>
+            <option value="<%= b.id %>"><%= b.name %></option>
+          <% end %>
+        </select>
+      </div>
+      
+      <!-- CHECKBOXES -->
+      <div class="form-group">
+      Skills:<br>
+        <% @skills.each do |s| %>
+          <input type="checkbox" name="skill" value="<%= s.id %>"> <%= s.name %><br>
+        <% end %>
+      </div>
+
+
+
+
+
+
       <div class="form-group">
         Extended Play Idea:
-    		<textarea type="textarea" name="extended_play_idea" class="form-control" rows="3" value="<%= @toy.purchase_price %>"></textarea>
+        <textarea type="textarea" name="extended_play_idea" class="form-control" rows="3" value="<%= @toy.purchase_price %>"></textarea>
       </div>
       <div class="form-group">
         <input type="submit" value="Update Toy" class="btn btn-default">
       </div>
     </form>
-    <p><a href="/toys">Back to All Toys</a></p>
+
+ 
   </div>
 	</div>
