--- a/app/views/toys/show.erb
+++ b/app/views/toys/show.erb
@@ -37,10 +37,11 @@
 	</div>
 	<div class="row" id="toyViewShow">
 		<h3><%= @toy.name %></h3>
-			
 		<p><span>UPC:</span> <%= @toy.upc %></p>
 		<p><span>Checked Out?</span></p>  <!-- NEED TO DO THIS! -->
 		<p><span>Have/Want:</span> <%= @toy.quantity_have %> / <%= @toy.quantity_wanted %></p>
+		<p><span>Assigned Age Group</span></p>
+
 
 		<p><span>Brand:</span> <%= @toy.brand %></p>
 		<p><span>Manufacturer Website:</span> <%= @toy.mfg_website %></p>
