--- a/app/views/boxes/new.erb
+++ b/app/views/boxes/new.erb
@@ -77,7 +77,7 @@
       
       <!-- CHECKBOXES -->
       <div class="form-group">
-      Toy:<br>
+      Toys:<br>
         <% @toys.each do |t| %>
           <input type="checkbox" name="toy" value="<%= t.id %>"> <%= t.name %><br>
         <% end %>
