--- a/app/views/toys/edit.erb
+++ b/app/views/toys/edit.erb
@@ -52,6 +52,7 @@
  
  
 <form action="/toys/<%= @toy.id %>" method="post">
+  <input type="hidden" name="_method" value="patch">
       <div class='form-group'>
         Name:
         <input type="text" name="name" class="form-control" value="<%= @toy.name %>">
@@ -139,7 +140,7 @@
         <textarea type="textarea" name="extended_play_idea" class="form-control" rows="3" value="<%= @toy.purchase_price %>"></textarea>
       </div>
       <div class="form-group">
-        <input type="submit" value="Update Toy" class="btn btn-default">
+        <input type="submit" value="Update Toy" >
       </div>
     </form>
 
