boxes assign toys working

--- a/app/views/assigned_age_groups/show.erb
+++ b/app/views/assigned_age_groups/show.erb
@@ -29,7 +29,8 @@
 		<h3><%= @assigned_age_group.age %></h3>
 			
 		<p><span>Age:</span> <%= @assigned_age_group.age %></p>
-
+		
+		<p><span>Boxes: <br> <%= @boxes.name %></span></p>
 		<p><a href="/assigned_age_groups">Back to All assigned_age_groups</a></p>
 
 	<p></p>
