--- a/app/views/skills/show.erb
+++ b/app/views/skills/show.erb
@@ -18,7 +18,7 @@
 		<p><span>Skill:</span> <%= @skill.name %></p>
 		<p><span>Description:</span> <%= @skill.description %></p>
 
-		<p><span>Toys <br> <% @toy.name %></span></p>
+		<p><span>Toys: <br> <% @toys.name %></span></p>
 
 		<p><a href="/skills">Back to All Skills</a></p>
 
