--- a/app/views/boxes/edit.erb
+++ b/app/views/boxes/edit.erb
@@ -46,6 +46,8 @@
 		<h1><%= @box.name %></h1>	
     
     <form action="/boxes/<%= @box.id %>" method="post">
+      <input type="hidden" name="_method" value="patch">
+
       <div class='form-group'>
         Name:
         <input type="text" name="name" class="form-control" value="<%= @box.name %>">
@@ -55,23 +57,23 @@
         <input type="text" name="location" class="form-control" value="<%= @box.location %>">
       </div>
       
-      <!-- CHECKBOXES -->
-      <div class="form-group">
-      Toys:<br>
-        <% @toys.each do |t| %>
-          <input type="checkbox" name="toy" value="<%= t.id %>"> <%= t.name %><br>
-        <% end %>
-      </div>
 
-
-
-
-
+    <ul>
+      <% @box.toys.each do |t| %>
+        <li><%= t.name %></li>
+      <% end %>
+    </ul>
+    <p><a href="/boxes/<%= @box.id %>/toys">Assign Toys</a></p>
 
       <div class="form-group">
         <input type="submit" value="Save Box" class="btn btn-default">
       </div>
     </form>
+
+  
+
+
+
 
     <p><a href="/boxes">Back to All boxes</a></p>
   </div>
