--- a/app/views/toys/edit.erb
+++ b/app/views/toys/edit.erb
@@ -137,7 +137,7 @@
 
       <div class="form-group">
         Extended Play Idea:
-        <textarea type="textarea" name="extended_play_idea" class="form-control" rows="3" value="<%= @toy.purchase_price %>"></textarea>
+        <textarea type="textarea" name="extended_play_idea" class="form-control" rows="3" value="<%= @toy.extended_play_idea %>"></textarea>
       </div>
       <div class="form-group">
         <input type="submit" value="Update Toy" >
